objects/LBI__Score__c.object
<CustomObject>
    <description>Lattice Scores &amp; Ratings for all Models</description>
    <fields>
        <fullName>LBI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LatticeScores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>LatticeScores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__LastScoredDate__c</fullName>
        <description>Last Scored Date Time for this record</description>
        <label>Last Scored Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>LatticeScores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__ModelName__c</fullName>
        <description>Model Name from Model reference</description>
        <formula>LBI__Model__r.LBI__ModelName__c</formula>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ModelRecordExternalId__c</fullName>
        <description>This acts as a composite key for Model and RecordID. Which will be used as unique key to update existing ModelScores.</description>
        <externalId>true</externalId>
        <label>Model Record External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__Model__c</fullName>
        <label>Lattice Model</label>
        <referenceTo>LBI__Model__c</referenceTo>
        <relationshipName>LatticeScores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__RatingValue__c</fullName>
        <label>Rating Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ScoreName__c</fullName>
        <label>Score Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ScoreValue__c</fullName>
        <label>Score Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lattice Score &amp; Rating</label>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>Lattice Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Scores &amp; Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>